--- a/rentech/new_rentech/package.json
+++ b/rentech/new_rentech/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
     "angular-feather": "^6.0.9",
     "bootstrap": "^4.4.1",
